[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.1.3"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "any", "postgres"] }
tower-http = { version = "0.3.4", features = ["cors", "fs", "trace"] }
serde_json = "1.0"
# anyhow = { version = "1.0.59", features = ["backtrace"] }
tower = "0.4.13"


[[bin]]
name = "main"
path = "/workspace/server/src/main.rs"
